name:                armory
version:             0.1.0.0
synopsis:            Multi-platform Program Installer.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Chris Blake <chris@code.sc>
maintainer:          Chris Blake <chris@code.sc>
copyright:           (c) 2015 Chris Blake
category:            System
build-type:          Simple
cabal-version:       >= 1.10

executable armory
  main-is:             System/Armory.hs
  default-extensions:  OverloadedStrings
  other-extensions:    FlexibleInstances
  build-depends:       aeson                == 0.7.0.6
                     , aeson-pretty         == 0.7.2
                     , base                 >= 4.6 && < 4.7
                     , bytestring           == 0.10.0.2
                     , containers           == 0.5.0.0
                     , optparse-applicative == 0.11.0.2
                     , split                == 0.2.2
                     , text                 == 0.11.3.1
                     , unordered-containers == 0.2.5.0
                     , vector               == 0.10.0.1
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
